--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,11 @@ button:focus {
     outline: none;
 }
 
-ul,
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
 li,
 ol {
     margin: 0px;
@@ -220,7 +224,7 @@ button {
 .header_section {
     width: 100%;
     float: left;
-    background-color: #252525;
+    background-color: #f76d37;
     height: auto;
     background-size: 100%;
 }
@@ -240,12 +244,12 @@ button {
 .navbar-light .navbar-nav .nav-link.active,
 .navbar-light .navbar-nav .nav-link.show,
 .navbar-light .navbar-nav .show>.nav-link {
-    color: #f76d37;
+    color: #ffffff;
 }
 
 .navbar-light .navbar-nav .nav-link:focus,
 .navbar-light .navbar-nav .nav-link:hover {
-    color: #f76d37;
+    color: #d8c559;
 }
 
 .navbar {
@@ -288,7 +292,7 @@ button {
 .banner_section {
     width: 100%;
     float: left;
-    background-image: url(../images/banner-bg.jpg);
+    background-image: url(../images/banner-atas.jpg);
     height: auto;
     background-size: 100%;
     padding: 10px 0px 25px 0px;
@@ -301,12 +305,46 @@ button {
     padding: 100px 0px;
 }
 
+@media only screen and (max-width: 600px) {
+    .outstanding_text {
+        height: 100%;
+        width: 100%;
+        
+    }
+  }
+
+  @media only screen and (min-width: 601px) and (max-width: 768px) {
+    .outstanding_text {
+        height: 100%;
+        width: 100%;
+        
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    .coffee_text {
+        height: 100%;
+        width: 100%;
+        
+    }
+  }
+
+  @media only screen and (min-width: 601px) and (max-width: 768px) {
+    .coffee_text {
+        height: 100%;
+        width: 100%;
+        
+    }
+  }
+
 .outstanding_text {
     width: 100%;
     float: left;
-    font-size: 60px;
-    color: #252525;
+    font-size: 45px;
+    color: #f76d37;
     padding-bottom: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
 }
 
 .coffee_text {
@@ -335,7 +373,7 @@ button {
     width: 100%;
     float: left;
     padding-right: 0;
-    background-color: #252525;
+    background-color: #f76d37;
     color: #fff;
     text-align: center;
     margin-right: 12px;
