--- a/css/style.css
+++ b/css/style.css
@@ -607,6 +607,32 @@ a:hover {
     background-attachment: fixed;
 }
 
+@media only screen and (max-width: 600px) {
+    .services_section {
+        width: 100%;
+        float: left;
+        background-image: url(../images/services-bg.jpg);
+        background-size: 175%;
+        background-position: center;
+        height: auto;
+        padding-bottom: 100px;
+        background-attachment: fixed;
+    }
+  }
+
+  @media only screen and (min-width: 601px) and (max-width: 768px) {
+    .services_section {
+        width: 100%;
+        float: left;
+        background-image: url(../images/services-bg.jpg);
+        background-size: 175%;
+        background-position: center;
+        height: auto;
+        padding-bottom: 100px;
+        background-attachment: fixed;
+    }
+  }
+
 .services_taital {
     width: 100%;
     float: left;
